adicionado historico
